syntax = "proto3";

package spire.types;
option go_package = "github.com/spiffe/spire/proto/spire/next/types";

message Bundle {
    // The SPIFFE ID of the trust domain the bundle belongs to, e.g. spiffe://example.org.
    string trust_domain_id = 1;

    // X509 root certificates.
    repeated X509Certificate x509_roots = 2;

    // JWT keys
    repeated JWTKey jwt_keys = 3;

    // A hint on how often the bundle should be refreshed from the bundle
    // provider, in seconds. Can be zero (meaning no hint available).
    int64 refresh_hint = 4;

    // The sequence number of the bundle. SPIRE does not use sequence numbers
    // and will treat this number as an opaque value.
    uint64 sequence_number = 5;
}

message X509Certificate {
    // The ASN.1/DER encoded bytes of the X.509 certificate.
    bytes asn1 = 1;
}

message JWTKey {
    // The PKIX encoded public key.
    bytes public_key = 1;

    // The key identifier.
    string key_id = 2;

    // When the key expires, in seconds since unix epoch (0 means "does not expire").
    int64 expires_at = 3;
}
